# openFrameworks

addons/ofxAndroid/: .gitignore
addons/ofxAndroid/ofAndroidLib/: AndroidManifest.xml  CMakeLists.txt  build.gradle  build.gradle_origin  settings.gradle
addons/ofxAndroid/ofAndroidLib/src/cc/openframeworks/: OFActivity.java  OFAndroid.java  OFAndroidGPS.java  OFAndroidLifeCycle.java  OFAndroidLifeCycleHelper.java
addons/ofxAndroid/src/: ofAppAndroidWindow.cpp
addons/ofxNetwork/src/: ofxTCPManager.h
libs/openFrameworks/app/: ofMainLoop.cpp
libs/openFrameworks/graphics/: ofImage.cpp  ofTrueTypeFont.cpp  ofTrueTypeFont.h
libs/openFrameworksCompiled/project/android/: CMakeLists.txt  build.gradle  common-functions.gradle
